logex pom.xml 수정

--- a/logex/pom.xml
+++ b/logex/pom.xml
@@ -103,7 +103,7 @@
 				<artifactId>tomcat-maven-plugin</artifactId>
 				<configuration>
 					<url>http://192.168.1.104:8080/manager/text</url>
-					<path>/mysite03</path>
+					<path>/logex</path>
 					<username>admin</username>
 					<password>admin</password>
 				</configuration>
