--- a/container/pom.xml
+++ b/container/pom.xml
@@ -71,6 +71,17 @@
 					<target>1.8</target>
 				</configuration>
 			</plugin>
+			
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>tomcat-maven-plugin</artifactId>
+				<configuration>
+					<url>http://192.168.1.104:8080/manager/text</url>
+					<path>/container</path>
+					<username>admin</username>
+					<password>admin</password>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 </project>
